--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "valibot": "^1.2.0"
   },
   "devDependencies": {
