--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemailer": "^7.0.12",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
-    "valibot": "^1.2.0"
+    "valibot": "^1.2.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
