--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
+    "nodemon": "^3.1.11",
     "p-limit": "^7.2.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
