--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^7.0.4",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
