--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "p-limit": "^7.2.0",
+    "pg": "^8.17.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.5",
     "sqlite3": "^5.1.7",
     "valibot": "^1.2.0",
     "zod": "^4.3.5"
