--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "@electric-sql/pglite": "^0.3.14",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.4",
+    "brotli": "^1.3.3",
+    "compression": "^1.8.1",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
@@ -31,8 +36,10 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.5",
-    "sqlite3": "^5.1.7",
+    "sqlite3": "^5.0.2",
     "valibot": "^1.2.0",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
