--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@electric-sql/pglite": "^0.3.14",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
+    "@types/events": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.4",
@@ -24,6 +25,8 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "eventemitter2": "^6.4.9",
+    "events": "^3.3.0",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
@@ -36,7 +39,6 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.5",
-    "sqlite3": "^5.0.2",
     "valibot": "^1.2.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
