--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.4",
     "brotli": "^1.3.3",
+    "bullmq": "^5.67.2",
     "compression": "^1.8.1",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
